[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "disklru"
version = "1.0.7"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "black",
    "isort", 
    "flake8",
    "mypy",
    "pylint",
    "pytest",
    "tox",
    "ruff",
]

[tool.setuptools]
include-package-data = true
